--- a/.github/workflows/build_esp.yml
+++ b/.github/workflows/build_esp.yml
@@ -21,7 +21,7 @@ on:
       - '.github/workflows/build_esp.yml'
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
