--- a/.github/workflows/build_family.yml
+++ b/.github/workflows/build_family.yml
@@ -16,7 +16,7 @@ on:
         required: true
         type: string
       os:
-        required: true
+        required: false
         type: string
         default: 'ubuntu-latest'
 
