--- a/.github/workflows/build_esp.yml
+++ b/.github/workflows/build_esp.yml
@@ -36,21 +36,23 @@ jobs:
         # ESP32-S3
         - 'espressif_s3_devkitm'
     steps:
-    - name: Setup Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.x'
-
-    - name: Checkout TinyUSB
-      uses: actions/checkout@v4
-
-    - name: Setup Toolchain
-      uses: ./.github/actions/setup_toolchain
-      with:
-        toolchain: 'esp-idf'
-
     - name: Build
-      run: docker run --rm -v $PWD:/project -w /project espressif/idf:v5.1.1 python3 tools/build.py -b ${{ matrix.board }}
+      uses: ./.github/workflows/build_util.yml
+      with:
+          build-system: 'cmake'
+          toolchain: 'esp-idf'
+          toolchain_url: 'v5.1.1'
+          build-args: '[${{ matrix.board }}]'
+
+#    - name: Setup Toolchain
+#      uses: ./.github/actions/setup_toolchain
+#      with:
+#        toolchain: 'esp-idf'
+#        # toolchain_url: is used as idf version
+#        toolchain_url: 'v5.1.1'
+#
+#    - name: Build
+#      run: docker run --rm -v $PWD:/project -w /project espressif/idf:v5.1.1 python3 tools/build.py -b ${{ matrix.board }}
 
     - name: Upload Artifacts for Hardware Testing
       if: matrix.board == 'espressif_s3_devkitm' && github.repository_owner == 'hathach'
