--- a/.github/workflows/build_esp.yml
+++ b/.github/workflows/build_esp.yml
@@ -26,6 +26,7 @@ concurrency:
 
 jobs:
   build-esp:
+    if: false
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -36,35 +37,27 @@ jobs:
         # ESP32-S3
         - 'espressif_s3_devkitm'
     steps:
-    - name: Build
-      uses: ./.github/workflows/build_util.yml
-      with:
-          build-system: 'cmake'
+      - name: Setup Toolchain
+        uses: ./.github/actions/setup_toolchain
+        with:
           toolchain: 'esp-idf'
+          # toolchain_url: is used as idf version
           toolchain_url: 'v5.1.1'
-          build-args: '[${{ matrix.board }}]'
 
-#    - name: Setup Toolchain
-#      uses: ./.github/actions/setup_toolchain
-#      with:
-#        toolchain: 'esp-idf'
-#        # toolchain_url: is used as idf version
-#        toolchain_url: 'v5.1.1'
-#
-#    - name: Build
-#      run: docker run --rm -v $PWD:/project -w /project espressif/idf:v5.1.1 python3 tools/build.py -b ${{ matrix.board }}
+      - name: Build
+        run: docker run --rm -v $PWD:/project -w /project espressif/idf:v5.1.1 python3 tools/build.py -b ${{ matrix.board }}
 
-    - name: Upload Artifacts for Hardware Testing
-      if: matrix.board == 'espressif_s3_devkitm' && github.repository_owner == 'hathach'
-      uses: actions/upload-artifact@v4
-      with:
-        name: ${{ matrix.board }}
-        path: |
-          cmake-build/cmake-build-${{ matrix.board }}/*/*/bootloader/bootloader.bin
-          cmake-build/cmake-build-${{ matrix.board }}/*/*/*.bin
-          cmake-build/cmake-build-${{ matrix.board }}/*/*/partition_table/partition-table.bin
-          cmake-build/cmake-build-${{ matrix.board }}/*/*/config.env
-          cmake-build/cmake-build-${{ matrix.board }}/*/*/flash_args
+      - name: Upload Artifacts for Hardware Testing
+        if: matrix.board == 'espressif_s3_devkitm' && github.repository_owner == 'hathach'
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.board }}
+          path: |
+            cmake-build/cmake-build-${{ matrix.board }}/*/*/bootloader/bootloader.bin
+            cmake-build/cmake-build-${{ matrix.board }}/*/*/*.bin
+            cmake-build/cmake-build-${{ matrix.board }}/*/*/partition_table/partition-table.bin
+            cmake-build/cmake-build-${{ matrix.board }}/*/*/config.env
+            cmake-build/cmake-build-${{ matrix.board }}/*/*/flash_args
 
   # ---------------------------------------
   # Hardware in the loop (HIL)
@@ -72,7 +65,7 @@ jobs:
   # ---------------------------------------
   hil-test:
     # run only with hathach's commit due to limited resource on RPI4
-    if: github.repository_owner == 'hathach'
+    if: github.repository_owner == 'hathach' && false
     needs: build-esp
     runs-on: [self-hosted, esp32s3, hardware-in-the-loop]
     strategy:
