more ci enhancement

--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -113,6 +113,7 @@ jobs:
   # Build Espressif
   # ---------------------------------------
   espressif:
+    if: false
     uses: ./.github/workflows/build_util.yml
     strategy:
       fail-fast: false
