--- a/.github/workflows/hil_test.yml
+++ b/.github/workflows/hil_test.yml
@@ -32,7 +32,7 @@ jobs:
     if: github.repository_owner == 'hathach'
     runs-on: ubuntu-latest
     outputs:
-      BOARD_LIST: ${{ steps.parse_hil_json.outputs.BOARD_LIST }}
+      BOARDS_ALL: ${{ steps.parse_hil_json.outputs.BOARDS_ALL }}
     steps:
       - name: Checkout TinyUSB
         uses: actions/checkout@v4
@@ -46,21 +46,21 @@ jobs:
         id: parse_hil_json
         run: |
           sudo apt install -y jq
-          # BOARD_LIST is all boards
-          BOARD_LIST=$(jq -r '.boards[] | "-b " + .name' test/hil/pi4.json | tr '\n' ' ')
-          echo "BOARD_LIST=$BOARD_LIST"
-          echo "BOARD_LIST=$BOARD_LIST" >> $GITHUB_OUTPUT
-          echo "BOARD_LIST=$BOARD_LIST" >> $GITHUB_ENV
+          # BOARDS_ALL is all boards
+          BOARDS_ALL=$(jq -r '.boards[] | "-b " + .name' test/hil/pi4.json | tr '\n' ' ')
+          echo "BOARDS_ALL=$BOARD_LIST"
+          echo "BOARDS_ALL=$BOARD_LIST" >> $GITHUB_OUTPUT
+          echo "BOARDS_ALL=$BOARD_LIST" >> $GITHUB_ENV
 
           # Non-Espresif boards
-          BOARD_NON_ESP=$(jq -r '.boards[] | select(.flasher != "esptool") | "-b " + .name' test/hil/pi4.json | tr '\n' ' ')
-          echo "BOARD_NON_ESP_LIST=$BOARD_NON_ESP_LIST"
-          echo "BOARD_NON_ESP_LIST=$BOARD_NON_ESP_LIST" >> $GITHUB_ENV
+          BOARDS_NON_ESP=$(jq -r '.boards[] | select(.flasher != "esptool") | "-b " + .name' test/hil/pi4.json | tr '\n' ' ')
+          echo "BOARDS_NON_ESP=$BOARDS_NON_ESP"
+          echo "BOARDS_NON_ESP=$BOARDS_NON_ESP" >> $GITHUB_ENV
 
           # Espressif boards
-          BOARD_ESP=$(jq -r '.boards[] | select(.flasher == "esptool") | "-b " + .name' test/hil/pi4.json | tr '\n' ' ')
-          echo "BOARD_ESP_LIST=$BOARD_ESP_LIST"
-          echo "BOARD_ESP_LIST=$BOARD_ESP_LIST" >> $GITHUB_ENV
+          BOARDS_ESP=$(jq -r '.boards[] | select(.flasher == "esptool") | "-b " + .name' test/hil/pi4.json | tr '\n' ' ')
+          echo "BOARDS_ESP=$BOARDS_ESP"
+          echo "BOARDS_ESP=$BOARDS_ESP" >> $GITHUB_ENV
 
       - name: Setup ARM Toolchain
         uses: ./.github/actions/setup_toolchain
@@ -68,7 +68,7 @@ jobs:
           toolchain: 'arm-gcc'
 
       - name: Setup ESP-IDF
-        if: env.BOARD_ESP_LIST != ''
+        if: env.BOARDS_ESP != ''
         uses: ./.github/actions/setup_toolchain
         with:
           toolchain: 'esp-idf'
@@ -77,14 +77,14 @@ jobs:
       - name: Get Dependencies
         uses: ./.github/actions/get_deps
         with:
-          arg: ${{ env.BOARD_LIST }}
+          arg: ${{ env.BOARDS_ALL }}
 
       - name: Build
-        run: python tools/build.py $BOARD_NON_ESP_LIST
+        run: python tools/build.py $BOARDS_NON_ESP
 
       - name: Build Espressif
-        if: env.BOARD_ESP_LIST != ''
-        run: docker run --rm -v $PWD:/project -w /project espressif/idf:v5.1.1 python3 tools/build.py $BOARD_ESP_LIST
+        if: env.BOARDS_ESP != ''
+        run: docker run --rm -v $PWD:/project -w /project espressif/idf:v5.1.1 python3 tools/build.py $BOARDS_ESP
 
       - name: Upload Artifacts for Hardware Testing
         uses: actions/upload-artifact@v4
@@ -108,7 +108,7 @@ jobs:
     needs: build
     runs-on: [self-hosted, rp2040, nrf52840, esp32s3, hardware-in-the-loop]
     env:
-        BOARD_LIST: ${{ needs.build.outputs.BOARD_LIST }}
+        BOARDS_ALL: ${{ needs.build.outputs.BOARDS_ALL }}
     steps:
       - name: Clean workspace
         run: |
@@ -137,5 +137,5 @@ jobs:
 
       - name: Test on actual hardware
         run: |
-          echo "BOARD_LIST=$BOARD_LIST"
+          echo "BOARDS_ALL=$BOARD_LIST"
           python3 test/hil/hil_test.py $BOARD_LIST pi4.json
