--- a/.github/workflows/hil_test.yml
+++ b/.github/workflows/hil_test.yml
@@ -151,8 +151,7 @@ jobs:
         # USB bus on rpi4 is not stable, reset it before testing
       - name: Reset USB bus
         run: |
-          lsusb
-          lsusb -t
+          # lsusb -t
           # reset VIA Labs 2.0 hub
           sudo usbreset 001/002
 
@@ -167,7 +166,16 @@ jobs:
           name: hil_pi4
           path: cmake-build
 
+      - name: Download Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: hil_pi4_esp
+          path: cmake-build
+
       - name: Test on actual hardware
         run: |
           echo "BOARDS_LIST=$BOARDS_LIST"
+          echo "::group::{cmake-build contents}"
+          tree cmake-build
+          echo "::endgroup::"
           python3 test/hil/hil_test.py $BOARDS_LIST pi4.json
