disable some run for testing

--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -63,8 +63,8 @@ jobs:
       matrix:
         toolchain:
           - 'aarch64-gcc'
-          - 'arm-clang'
-          - 'arm-gcc'
+          #- 'arm-clang'
+          #- 'arm-gcc'
           - 'msp430-gcc'
           - 'riscv-gcc'
     with:
@@ -85,7 +85,7 @@ jobs:
         toolchain:
           - 'aarch64-gcc'
           #- 'arm-clang'
-          - 'arm-gcc'
+          #- 'arm-gcc'
           - 'msp430-gcc'
           - 'riscv-gcc'
     with:
